<resources>
    <string name="app_name">Device Tracer</string>
    <string name="welcome">Welcome</string>
    <string name="to_device_tracer_app">to device tracer app</string>
    <string name="create_account_or_login">Create a new account or login now.</string>
    <string name="create_account">Create account</string>
    <string name="label_login">Login</string>
    <string name="registration">Registration</string>
    <string name="registration_note">This device will be registered with the given email address.</string>
    <string name="login_note">Enter your login information.</string>
    <string name="continue_str">Continue</string>
    <string name="password_note">Password must be at least 6 characters.</string>
    <string name="name_hints">Your Name</string>
    <string name="reset">Reset Password</string>
    <string name="reset_note">A password reset link will be sent to your email.</string>
    <string name="reset_email_note">We have sent you a link to your registered email address.</string>
    <string name="go_to_email">Go to email</string>
    <string name="back_to_login">Back to login</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="label_name">Name</string>
    <string name="label_new_name">New name</string>
    <string name="label_email">Email Address</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_password">Password</string>
    <string name="label_change_password">Change your password</string>
    <string name="label_imei">IMEI</string>
    <string name="label_forgot">Forgot your password?</string>
    <string name="label_click_here">Click here.</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_trace">Trace a device</string>
    <string name="label_settings">Settings</string>
    <string name="label_share">Share</string>
    <string name="label_support">Support</string>
    <string name="label_logout">Logout</string>
    <string name="label_my_profile">My Profile</string>
    <string name="label_privacy">Privacy Policy</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_who_can_see_me">Who can see me</string>
    <string name="label_update">Update</string>
    <string name="label_search">Search</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="phone_hints">Enter your phone number.</string>
    <string name="label_set_phone">Set phone number</string>
    <string name="label_set_name">Update your name</string>
    <string name="phone_note">We will send a code (via SMS text message) to your phone number.</string>
    <string name="otp_note">Please enter the OTP that sent to your number and click continue.</string>
    <string name="search_hints">Search by imei or phone number</string>
    <string name="permission_note">Permissions are required for using the app. Please give permissions.</string>
    <string name="label_verification">Verification</string>
    <string name="label_otp">OTP</string>
    <string name="label_otp_request">Resend OTP code</string>
    <string name="label_binding">Bind me with this device</string>
    <string name="label_old_password">Old password</string>
    <string name="label_new_password">New password</string>
    <string name="label_confirm_new_password">Confirm new password</string>
    <string name="label_binding_code">Binding code</string>
    <string name="label_set_binding">Device binding</string>
    <string name="binding_note">Enter the binding code that sent to your email.</string>
</resources>
