<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:gravity="bottom"
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <ImageView
            android:src="@drawable/ic_logo"
            android:scaleType="fitXY"
            android:layout_width="60dp"
            android:layout_height="73dp"/>

        <TextView
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorWhite"
            android:text="@string/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="-5dp"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:text="@string/to_device_tracer_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorLight"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="20sp"
            android:textColor="@color/colorDark"
            android:text="@string/create_account_or_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                style="@style/AppButton"
                android:id="@+id/welcome_regBtn"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"/>

            <com.google.android.material.button.MaterialButton
                style="@style/AppButton"
                android:id="@+id/welcome_loginBtn"
                android:textColor="@color/colorPrimaryDark"
                android:backgroundTint="@color/colorSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_login"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>