<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ResetActivity">

    <ImageView
        android:scaleType="fitXY"
        android:src="@drawable/ic_mailbox"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <TextView
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/colorDark"
        android:text="@string/reset_email_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/reset_email_btn"
        android:textColor="@color/colorPrimaryDark"
        style="@style/AppButton"
        android:background="@drawable/btn_secondary"
        android:text="@string/go_to_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/reset_login_btn"
        android:layout_marginBottom="2dp"
        android:textColor="@color/colorWhite"
        style="@style/AppButton"
        android:background="@drawable/btn_primary"
        android:text="@string/back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>