<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdatePasswordActivity">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/update_password_backBtn"
            android:src="@drawable/ic_chevron_left"
            android:scaleType="fitXY"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="-10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/label_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppEditTextWrapper"
            android:hint="@string/label_old_password"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_old_password"
                style="@style/AppEditText"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            style="@style/AppEditTextWrapper"
            android:hint="@string/label_new_password"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_new_password"
                style="@style/AppEditText"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            style="@style/AppEditTextWrapper"
            android:hint="@string/label_confirm_new_password"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_confirm_new_password"
                style="@style/AppEditText"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="14dp"
            android:textStyle="italic"
            android:text="@string/password_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.button.MaterialButton
                style="@style/AppButton"
                android:id="@+id/update_password_btn"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_str"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>