<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".PhoneverificationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:id="@+id/verify_backBtn"
            android:src="@drawable/ic_chevron_left"
            android:scaleType="fitXY"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="-10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/label_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:text="@string/otp_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorLightDark"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_otp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/verify_otp"
                style="@style/AppEditText"
                android:hint="@string/otp_hints"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/otp_timer"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/verify_otp_request"
                android:visibility="invisible"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/label_otp_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_marginBottom="2dp"
                android:id="@+id/verify_btn"
                android:textColor="@color/colorWhite"
                style="@style/AppButton"
                android:background="@drawable/btn_primary"
                android:text="@string/continue_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>