<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BindingActivity">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="205dp">

        <ImageView
            android:id="@+id/binding_backBtn"
            android:src="@drawable/ic_chevron_left"
            android:scaleType="fitXY"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="-10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/label_set_binding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:text="@string/binding_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppEditTextWrapper"
            android:hint="@string/label_binding_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bindingCode"
                style="@style/AppEditText"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.button.MaterialButton
                style="@style/AppButton"
                android:id="@+id/binding_btn"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_str"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>