<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotActivity">

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="220dp">
        <LinearLayout
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/forgot_backBtn"
                    android:src="@drawable/ic_chevron_left"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginTop="-10dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="right"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:id="@+id/forgot_progressbar"
                    android:visibility="gone"
                    android:layout_marginTop="-10dp"
                    android:indeterminateTint="@color/colorWhite"
                    android:layout_width="24dp"
                    android:layout_height="40sp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:text="@string/reset_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorLightDark"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:hint="@string/email_hints"
                android:id="@+id/forgot_email"
                style="@style/AppEditText"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/forgot_btn"
                android:layout_marginBottom="2dp"
                android:textColor="@color/colorWhite"
                style="@style/AppButton"
                android:background="@drawable/btn_primary"
                android:text="@string/continue_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>