<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <LinearLayout
            android:paddingRight="30dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight=".7"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/profile_name"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:drawableLeft="@drawable/ic_barcode"
                android:drawablePadding="10dp"
                android:id="@+id/profile_imei"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <RelativeLayout
            android:gravity="right|center_vertical"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RelativeLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_cardHead"
        android:backgroundTint="@color/colorLight"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="30dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/label_name"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/profile_edit_name"
                android:inputType="textPersonName"
                style="@style/AppEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/label_mobile"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/profile_edit_mobile"
                android:focusable="false"
                android:inputType="phone"
                style="@style/AppEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:gravity="bottom"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/profile_updateBtn"
                    android:textColor="@color/colorWhite"
                    style="@style/AppButton"
                    android:background="@drawable/btn_primary"
                    android:text="@string/label_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_marginTop="15dp"
                    android:id="@+id/profile_bindingBtn"
                    android:textColor="@color/colorPrimaryDark"
                    style="@style/AppButton"
                    android:background="@drawable/btn_secondary"
                    android:text="@string/label_binding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>